--- a/FiscaliZi.Colinfo/packages.config
+++ b/FiscaliZi.Colinfo/packages.config
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
-  <package id="Dragablz" version="0.0.3.185" targetFramework="net461" />
-  <package id="Fody" version="1.29.4" targetFramework="net461" developmentDependency="true" />
-  <package id="MahApps.Metro" version="1.4.3" targetFramework="net461" />
+  <package id="Dragablz" version="0.0.3.186" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.5.0-alpha002" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
-  <package id="MaterialDesignThemes" version="2.2.1.750" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.3.0-ci804" targetFramework="net461" />
   <package id="MaterialDesignThemes.MahApps" version="0.0.10" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.1.0" targetFramework="net461" />
@@ -32,9 +31,14 @@
   <package id="MvvmLightLibs" version="5.4.0-alpha" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.2-beta2" targetFramework="net461" />
-  <package id="Npgsql" version="3.2.0" targetFramework="net461" />
+  <package id="Npgsql" version="3.2.1" targetFramework="net461" />
   <package id="Npgsql.EntityFrameworkCore.PostgreSQL" version="1.1.0" targetFramework="net461" />
-  <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="net461" developmentDependency="true" />
+  <package id="PostSharp" version="4.3.29" targetFramework="net461" />
+  <package id="PostSharp.Patterns.Common" version="4.3.29" targetFramework="net461" />
+  <package id="PostSharp.Patterns.Common.Redist" version="5.0.18-preview" targetFramework="net461" />
+  <package id="PostSharp.Patterns.Model" version="4.3.29" targetFramework="net461" />
+  <package id="PostSharp.Patterns.Model.Redist" version="5.0.18-preview" targetFramework="net461" />
+  <package id="PostSharp.Redist" version="5.0.18-preview" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
@@ -86,5 +90,6 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XmlSerializer" version="4.0.11" targetFramework="net461" />
   <package id="Zeus.Net.NFe.NFCe" version="1.0.1.485" targetFramework="net461" />
 </packages>
