--- a/FiscaliZi.Colinfo/FiscaliZi.Colinfo.csproj
+++ b/FiscaliZi.Colinfo/FiscaliZi.Colinfo.csproj
@@ -268,6 +268,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Assets\ColetaView.xaml.cs">
+      <DependentUpon>ColetaView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Assets\ColetaViewModelcs.cs" />
     <Compile Include="Assets\Dialog_Conculta.xaml.cs">
       <DependentUpon>Dialog_Conculta.xaml</DependentUpon>
     </Compile>
@@ -295,15 +299,19 @@
     <Compile Include="Utils\Funcoes.cs" />
     <Compile Include="Utils\Monitors.cs" />
     <Compile Include="Utils\Unzip.cs" />
-    <Compile Include="Assets\ColetaViewModel.cs" />
+    <Compile Include="Assets\EntradaViewModel.cs" />
     <Compile Include="Assets\ColinfoBootstrapper.cs" />
     <Compile Include="Assets\MainViewModel.cs" />
-    <Compile Include="Assets\ColetaView.xaml.cs">
-      <DependentUpon>ColetaView.xaml</DependentUpon>
+    <Compile Include="Assets\EntradaView.xaml.cs">
+      <DependentUpon>EntradaView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Assets\FlyPedido.xaml.cs">
       <DependentUpon>FlyPedido.xaml</DependentUpon>
     </Compile>
+    <Page Include="Assets\ColetaView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Assets\Dialog_Conculta.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -348,7 +356,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Assets\ColetaView.xaml">
+    <Page Include="Assets\EntradaView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
