--- a/FiscaliZi.Colinfo/packages.config
+++ b/FiscaliZi.Colinfo/packages.config
@@ -4,9 +4,9 @@
   <package id="Caliburn.Micro.Core" version="3.0.3" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Dragablz" version="0.0.3.186" targetFramework="net461" />
-  <package id="MahApps.Metro" version="1.5.0-alpha002" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.5.0-alpha018" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
-  <package id="MaterialDesignThemes" version="2.3.0-ci804" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net461" />
   <package id="MaterialDesignThemes.MahApps" version="0.0.10" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.1.0" targetFramework="net461" />
