--- a/FiscaliZi.Colinfo/FiscaliZi.Colinfo.csproj
+++ b/FiscaliZi.Colinfo/FiscaliZi.Colinfo.csproj
@@ -291,25 +291,29 @@
       <DependentUpon>Dialog_ErroConsulta.xaml</DependentUpon>
     </Compile>
     <Compile Include="ColinfoContext.cs" />
-    <Compile Include="Migrations\20170322171249_mig.cs" />
-    <Compile Include="Migrations\20170322171249_mig.designer.cs">
-      <DependentUpon>20170322171249_mig.cs</DependentUpon>
+    <Compile Include="Migrations\20170412032122_mig.cs" />
+    <Compile Include="Migrations\20170412032122_mig.designer.cs">
+      <DependentUpon>20170412032122_mig.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\20170322172947_mig-2.cs" />
-    <Compile Include="Migrations\20170322172947_mig-2.designer.cs">
-      <DependentUpon>20170322172947_mig-2.cs</DependentUpon>
+    <Compile Include="Migrations\20170412033648_mig2.cs" />
+    <Compile Include="Migrations\20170412033648_mig2.designer.cs">
+      <DependentUpon>20170412033648_mig2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\20170323173737_mi-3.cs" />
-    <Compile Include="Migrations\20170323173737_mi-3.designer.cs">
-      <DependentUpon>20170323173737_mi-3.cs</DependentUpon>
+    <Compile Include="Migrations\20170412040624_mig3.cs" />
+    <Compile Include="Migrations\20170412040624_mig3.designer.cs">
+      <DependentUpon>20170412040624_mig3.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\20170327052113_m4.cs" />
-    <Compile Include="Migrations\20170327052113_m4.designer.cs">
-      <DependentUpon>20170327052113_m4.cs</DependentUpon>
+    <Compile Include="Migrations\20170412041351_mig4.cs" />
+    <Compile Include="Migrations\20170412041351_mig4.designer.cs">
+      <DependentUpon>20170412041351_mig4.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\20170402210836_mig6.cs" />
-    <Compile Include="Migrations\20170402210836_mig6.designer.cs">
-      <DependentUpon>20170402210836_mig6.cs</DependentUpon>
+    <Compile Include="Migrations\20170412042855_mig5.cs" />
+    <Compile Include="Migrations\20170412042855_mig5.designer.cs">
+      <DependentUpon>20170412042855_mig5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20170412045014_mig6.cs" />
+    <Compile Include="Migrations\20170412045014_mig6.designer.cs">
+      <DependentUpon>20170412045014_mig6.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\ColinfoContextModelSnapshot.cs" />
     <Compile Include="Model\CadCli.cs" />
@@ -318,6 +322,7 @@
     <Compile Include="Model\ConfiguracaoCsc.cs" />
     <Compile Include="Model\Converters.cs" />
     <Compile Include="Model\DesignData.cs" />
+    <Compile Include="Model\Endereco.cs" />
     <Compile Include="Model\Info.cs" />
     <Compile Include="Model\Item.cs" />
     <Compile Include="Model\Pedido.cs" />
